<resources>
    <string name="app_name">SUCC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard_label">What\'s your name</string>
    <string name="first_name_hint_label">First name</string>
    <string name="btn_next">NEXT</string>
    <string name="logo_description">SUCC logo</string>
    <string name="voice_question">Which voice do you sing?</string>
    <string name="soprano">Soprano</string>
    <string name="alto">Alto</string>
    <string name="tenor">Tenor</string>
    <string name="bass">Bass</string>
    <string name="commit">COMMIT</string>
    <string name="set_theme_lbl">Set theme</string>
    <string name="add_hymn_pack">Add hymn pack</string>
    <string name="add">Add</string>
    <string name="new_hymn_pack">Hymn pack</string>
    <string name="hymn_pack_added">Hymn pack added</string>
    <string name="theme_change_text">Theme changed to:</string>
    <string name="package_drawable">package</string>
    <string name="sing">Sing</string>
    <string name="sign_up">Sign Up</string>
    <string name="pack_del">Hymn pack deleted</string>
    <string name="pack_add">Hymn pack added</string>
    <string name="error_no_input">No you don\'t, type something please</string>
    <string name="search_hymn">Search hymn</string>
    <string name="hymn_pack_icon">Hymn pack icon</string>
    <string name="hymn_title">Hymn Title</string>
    <string name="verse_text">Verse text</string>
    <string name="is_chorus">is chorus</string>
    <string name="add_hymn">Add new hymn</string>
    <string name="theme_update">Theme update received!</string>
    <string name="save_hymn">save hymn</string>
    <string name="select_pack">Select hymn pack</string>
    <string name="add_verses_or_chorus">Add verses or chorus</string>
    <string name="finish">Finish</string>
    <string name="_8942">⋮</string>
    <string name="edit_hymn">Edit hymn</string>
    <string name="delete_verse">Delete verse</string>
    <string name="edit_verse">Edit verse</string>
    <string name="verse_del">Verse deleted</string>
    <string name="save">SAVE</string>
    <string name="hymn_number">Hymn number</string>
    <string name="hymn_page">Hymn page</string>
    <string name="cdh">CDH - Christian Devotions and Hymns</string>
    <string name="blue_hymnal">Blue Hymnal</string>
    <string name="none">None</string>
    <string name="save_edits">SAVE EDITS</string>
    <string name="singing">Singing</string>
    <string name="page">p.</string>
    <string name="musical_note">musical note</string>
    <string name="number">No.</string>
    <string name="not_in_books">Not in books</string>
    <string name="delete_hymn">Delete hymn</string>
    <string name="hymn_deleted">Hymn deleted</string>
    <string name="new_hymn_title">New hymn title</string>
    <string name="alter_verses">Alter verses</string>
    <string name="change_hymn_pack">Change hymn pack</string>
    <string name="hymn_pack_dummy">Entrance Hymns Dummy</string>
    <string name="pack_size_dummy">106</string>
    <string name="sop">Sop</string>
    <string name="choir">Choir</string>
    <string name="listen_to_audio">Listen to audio</string>
    <string name="add_audio">Add audio</string>
    <string name="record">record</string>
    <string name="record_audio">Record Audio</string>
    <string name="play_audio">play audio</string>
    <string name="select_voice">Select voice</string>
    <string name="uploaded">Uploaded:</string>
    <string name="edit_audios">Edit audios</string>
    <string name="current_audios">Current audios</string>
    <string name="select_voice_err">Select voice please</string>
    <string name="rec_paused">Recording paused</string>
    <string name="strathmore_chaplaincy_logo">Strathmore Chaplaincy Logo</string>
    <string name="upload">upload</string>
    <string name="del_audio">Delete audio</string>
    <string name="s">S</string>
    <string name="a">A</string>
    <string name="t">T</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="delete">Delete</string>
    <string name="choose_file">Choose file</string>
    <string name="add_fav_hymn">Add to favourites</string>
    <string name="fav_added">Hymn added to favourites</string>
    <string name="initDuration">0:00</string>
    <string name="remove_fav_hymn">Remove from favourites</string>
    <string name="favs">Favourites</string>
    <string name="for_mass">For Mass</string>
    <string name="mass_dialog_title">Mass Hymn</string>
    <string name="choose">choose</string>
    <string name="mass_hymn_set">Mass hymn set</string>
    <string name="hymns_mass">Hymns for Mass</string>
    <string name="remove_mass_hymn">Remove from Mass list</string>
    <string name="mass_hymns">Mass Hymns</string>
    <string name="choose_date">Choose date</string>
    <string name="enter_code">Enter authentication code</string>
    <string name="code_here">Code Here</string>
    <string name="submit">SUBMIT</string>
    <string name="dont_have_code">I don\'t have any code</string>
    <string name="oops">oops</string>
    <string name="turn_data_on">No internet</string>
    <string name="nothing_here">Nothing here</string>
    <string name="invalid_code">Invalid code,try again or proceed without code</string>
    <string name="send_feedback">Send feedback to developer</string>
    <string name="app_dev_email">succ.strathmore.dev@gmail.com</string>
    <string name="feedback_title">Feedback on SUCC app</string>
    <string name="music_score">Music score</string>
    <string name="add_music_score">Add music score</string>
    <string name="del_score_on_cloud">Erase music score from cloud</string>
    <string name="no_need_for_code">If you are not in the choir you don\'t need any code</string>
</resources>
